# pidory

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.ko.md  README.md  SECURITY.md  config.dev.toml.example  config.qa.toml.example  config.toml.example
.codex-review/: codex-review-100-160456.json  codex-review-104-335431.json  codex-review-106-388552.json  codex-review-111-565343.json  codex-review-114-52576.json  codex-review-117-94168.json  codex-review-118-112534.json  codex-review-119-147679.json  codex-review-120-148019.json  codex-review-123-34603.json  codex-review-125-2922.json  codex-review-129-203331.json  codex-review-37-1971397.json  codex-review-38-2259849.json  codex-review-49-3389487.json  codex-review-51-3464343.json  codex-review-54-3566648.json  codex-review-60-3612176.json  codex-review-61-3612921.json  codex-review-68-363685.json  codex-review-69-364010.json  codex-review-70-406929.json  codex-review-79-27953.json  codex-review-80-91620.json  codex-review-83-224752.json  codex-review-86-270816.json  codex-review-87-293926.json  codex-review-89-950594.json  codex-review-90-956070.json  codex-review-92-1031486.json  codex-review-93-1064954.json  codex-review-96-54052.json  codex-review-multi-q-344633.json  pr-100-diff.txt  pr-104-diff.txt  pr-106-diff.txt  pr-111-diff.txt  pr-114-diff.txt  pr-117-diff.txt  pr-118-diff.txt  (+25 more)
.github/: dependabot.yml
.sqlx/: query-2652099784b57bc01992aa189e35c094fc755a96b24eea2f109c9aa39200e5c0.json
deploy/: RELEASE.md  com.pidory.bot.plist  install-qa.sh  install.sh  pidory-delayed-restart.service  pidory-dev.service  pidory-qa.service  pidory.service  update.sh
docs/qa/: 381-mention-roster-scenarios.md
docs/release-notes/: v0.7.0.md  v0.7.1.md  v0.7.2.md
migrations/: 20260330000001_init.sql  20260513000001_add_user_settings.sql  20260516000001_add_member_roster.sql
scripts/: pidory-migrate.sh  postgres-qa-setup.sh  postgres-setup.sh  prod-deploy.sh  qa-deploy.sh  statusline-ratelimit-writer.sh  statusline-wrapper.sh  try-qa-token.sh
skills/pidory-toss/: SKILL.md
src/: config.rs  error.rs  i18n.rs  lib.rs  main.rs  ratelimit.rs  release.rs
src/claude_settings/: cleanup.rs  danger.rs  dedup.rs  editor.rs  error.rs  integrity.rs  lock.rs  mod.rs  notifier.rs  path.rs  path_safety.rs  rule.rs  settings_reader.rs
src/commands/: agent.rs  branch.rs  mention.rs  mod.rs  model.rs  permissions.rs  recall.rs  register.rs  session.rs  skill.rs  update.rs
src/db/: mod.rs  models.rs  repository.rs  roster.rs
src/handler/: attachment_download.rs  cleanup.rs  discord_notifier.rs  dispatch_locks.rs  emoji.rs  file_attach.rs  formatter.rs  mention.rs  message.rs  mod.rs  next_step_ui.rs  permission_ui.rs  question_ui.rs  reset_ui.rs  session_state.rs  status.rs  todo_tracker.rs
src/i18n/: background.rs  commands.rs  formatting.rs  mod.rs  notification.rs  permission.rs  session.rs
src/update/: git.rs  (+11 more)
tests/: baseline_byte_equal.rs  parser_fixtures.rs
(+106 files in other folders)
