[package]
name = "pidory"
version = "0.2.5"
edition = "2024"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
