[package]
name = "pidory"
version = "0.6.7"
edition = "2024"

[dependencies]
futures-util = "0.3"
poise = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bytes = "1"
comfy-table = { version = "7", default-features = false }
sha2 = "0.11"
libc = "0.2"
shlex = "1"


[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio-test = "0.4"
